# Aes

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/xdq/aes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aes.c  aes.h  base64.c  base64.h  encrypt.cpp
app/src/main/java/org/xdq/aes/: MainActivity.java
app/src/main/java/org/xdq/aes/util/: AES4CUtil.java  AESUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/xdq/aes/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
